2014-03-04  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/60382
	* gcc.dg/vect/pr60382.c: New testcase.

2014-03-03  Jerry DeLisle  <jvdelisle@gcc.gnu>

	PR libfortran/60148
	* gfortran.dg/namelist_84.f90: New test.

2014-03-03  Kirill Yukhin  <kirill.yukhin@intel.com>

	* gcc.target/i386/avx512er-vexp2ps-2.c: Decrease exponent
	argument to avoid inf values.
	* gcc.target/i386/avx512f-vdivps-2.c: Compare results with
	UNION_FP_CHECK machinery.

2014-03-03  Renlin Li  <Renlin.Li@arm.com>

	* gcc.target/aarch64/aapcs64/validate_memory.h: Move f32in64 and
	i32in128 cases outside special big-endian processing block.

2014-03-03  Jakub Jelinek  <jakub@redhat.com>

	PR preprocessor/60400
	* c-c++-common/cpp/pr60400.c: New test.
	* c-c++-common/cpp/pr60400-1.h: New file.
	* c-c++-common/cpp/pr60400-2.h: New file.

	PR objc++/60398
	* obj-c++.dg/invalid-method-2.mm: Adjust dg-error regexps.

	* c-c++-common/cilk-plus/PS/vectorlength-2.c: New test.
	* c-c++-common/cilk-plus/PS/vectorlength-3.c: New test.

2014-03-02  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60150
	* g++.dg/lto/pr60150.H: New testcase.
	* g++.dg/lto/pr60150_0.C: New testcase.
	* g++.dg/lto/pr60150_1.C: New testcase.

2014-03-02  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60306
	* testsuite/g++.dg/ipa/devirt-29.C: New testcase

2014-03-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR fortran/60236
	* gfortran.dg/vect/pr32380.f: Fix expected test results.

2014-03-01  Edward Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/50025
	* g++.dg/cpp0x/pr50025.C: New.

2014-03-01  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/60377
	* g++.dg/cpp1y/pr60377.C: New testcase.

2014-03-01  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/60341
	* gfortran.dg/str_comp_optimize_1.f90: New test.

2014-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/60071
	* gcc.c-torture/compile/pr60071.c: New.

2014-02-28  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/60359
	* gfortran.dg/unlimited_polymorphic_16.f90: New.
