@@ -1,3 +1,7 @@
+2014-03-04  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* g++.dg/abi/anon2.C: Don't scan assembler for c++98.
+
 2014-03-04  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/60382
